# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "randomscm"
version = "0.1.1"
description = "The Bootstrap aggregating version of the great SCM"
readme = "README.md"
authors = [{ name = "Thibaud Godon", email = "thibaud.godon@protonmail.com" },
           { name = "Elina Francovic-Fontaine", email = "elina.francovic-fontaine.1@ulaval.ca" },
           { name = "Baptiste Bauvin", email = "baptiste.bauvin@lis-lab.fr" },]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["machine-learning", "classification", "ensemble-learning",
            "set-covering-machine", "rule-based-models"]
dependencies = [
    "scikit-learn>=0.19",
    "numpy",
    "scipy",
    "pyscm-ml"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black"]

[project.urls]
Homepage = "https://github.com/thibgo/randomscm"
